# dbs_devops2

./: .gitignore  p.py  railway.toml  render.yaml
DBS-Feedback-System/: .dockerignore  .env.example  .gitignore  .railwayignore  COMPLETE_PROJECT_DOCUMENTATION.md  DOCKER_DEPLOYMENT.md  IEEE_PAPER.html  IEEE_PAPER.md  INTEGRATION_COMPLETE.md  MIGRATION_SESSION_DOCUMENTATION.md  NETLIFY_DEPLOYMENT.md  RAILWAY_EMAIL_CONFIG.md  README.md  docker-compose.yml  import_simple.ps1  import_to_railway.ps1  import_to_railway.sh  migrate_to_railway.md  pytest.ini  render.yaml
DBS-Feedback-System/backend/: .dockerignore  Dockerfile  Dockerfile.standalone  GoogleAuthController.java  pom.xml  railway.json
DBS-Feedback-System/chatbot/: .dockerignore  .env.example  Dockerfile  Dockerfile.hf  app.js  index.js  package.json  setup-huggingface.bat  setup-huggingface.sh  test-server.js
DBS-Feedback-System/database/: .dockerignore  test_tracking.csv
DBS-Feedback-System/docs/: APIs.md  ARCHITECTURE.md  CONFIG.md  DATAFLOWS.md  OPERATIONS.md  SETUP.md
DBS-Feedback-System/orchestrator/: Dockerfile  __init__.py  app.py  pyproject.toml  requirements.txt
DBS-Feedback-System/orchestrator/agents/: __init__.py  enrichment_agent.py  implicit_agent.py  intake_agent.py  notifier_agent.py  priority_agent.py  scheduler_agent.py  task_agent.py  triage_agent.py
DBS-Feedback-System/orchestrator/agents/tests/: test_priority_agent.py
DBS-Feedback-System/orchestrator/samples/: implicit.json
dbs_devops2_clean/: .dockerignore  .env.example  DOCKER_DEPLOYMENT.md
(+211 files in other folders)
