[project]
name = "feedback-orchestrator"
version = "0.1.0"
description = "Agentic orchestrator for Universal Feedback System"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.6", extras=["standard"]}
httpx = "^0.27.2"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
redis = "^5.0.8"
langchain-core = "^0.3.12"
langgraph = "^0.2.28"

[tool.uvicorn]
host = "0.0.0.0"
port = 7000
